--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-swipeable": "^7.0.2"
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
